--- a/PadrinhosMagicosT3/index.html
+++ b/PadrinhosMagicosT3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Padrinhos Mágicos online</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -15,6 +16,37 @@
         </section>
     </header>
     <main>
+        <section>
+            <section class="caixaTitulo">
+                <div>
+                    <h2>Episódios</h2>
+                    <h2>Os Padrinhos Mágicos</h2>
+                </div>
+                <img src="assets/img/New_Timmy_Stock.png" alt="">
+            </section>
+            <section class="caixaEp">
+                <section>
+                    <img src="assets/img/54bbac724c8d9de8553bfc4a19d1fe21.jpeg" alt="">
+                    <h2>1. Anti Poof</h2>
+                    <p>Wanda sente uma nova ameaça: o nascimento de Foop, o oposto antifada de Poof. Depois de arruinar o Mundo Antifadas, Foop está de olho no Mundo das Fadas e na Terra!</p>
+                </section>
+                <section>
+                    <img src="assets/img/93d05a5672e1fcd105ac065e75bbd12f.jpeg" alt="">
+                    <h2>2. Acrescente um pai/Esquilinhos e Bombas de Creme</h2>
+                    <p>Wanda sente uma nova ameaça:</p>
+                </section>
+                <section>
+                    <img src="assets/img/033ff34f59add19bdbe0d924d449296b.jpeg" alt="">
+                    <h2>3. Ratoescapáveis/A Fórmula do Desastre</h2>
+                    <p>Poof transforma Timmy e Vicky em personagens de desenho animado.</p>
+                </section>
+            </section>
+        </section>
+        <footer>
+            <a href="#" target="_blank" rel="noopener noreferrer">Termos e aviso de privacidade</a>
+            <a href="#" target="_blank" rel="noopener noreferrer">Ajuda</a>
+            <a href="#" target="_blank" rel="noopener noreferrer">feedback</a>
+        </footer>
     </main>
 </body>
 </html>
