✨ feat: Adicionando Overlay nas imagens

--- a/PadrinhosMagicosT3/index.html
+++ b/PadrinhosMagicosT3/index.html
@@ -26,27 +26,42 @@
             </section>
             <section class="caixaEp">
                 <section>
-                    <img src="assets/img/54bbac724c8d9de8553bfc4a19d1fe21.jpeg" alt="">
+                    <figure class="card-image">
+                        <a href="https://youtu.be/X4kY7v5RboQ?si=2S6oSoj92qENRvAR" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/54bbac724c8d9de8553bfc4a19d1fe21.jpeg" alt="">
+                            <div class="overlay-card">Clique aqui para assistir</div>
+                        </a>
+                    </figure>
                     <h2>1. Anti Poof</h2>
                     <p>Wanda sente uma nova ameaça: o nascimento de Foop, o oposto antifada de Poof. Depois de arruinar o Mundo Antifadas, Foop está de olho no Mundo das Fadas e na Terra!</p>
                 </section>
                 <section>
-                    <img src="assets/img/93d05a5672e1fcd105ac065e75bbd12f.jpeg" alt="">
+                    <figure class="card-image">
+                        <a href="https://youtu.be/cK9HqBTMdag?si=owwVIb5YOxH4n-65" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/93d05a5672e1fcd105ac065e75bbd12f.jpeg" alt="">
+                            <div class="overlay-card">Clique aqui para assistir</div>
+                        </a>
+                    </figure>
                     <h2>2. Acrescente um pai/Esquilinhos e Bombas de Creme</h2>
                     <p>Wanda sente uma nova ameaça:</p>
                 </section>
                 <section>
-                    <img src="assets/img/033ff34f59add19bdbe0d924d449296b.jpeg" alt="">
+                    <figure class="card-image">
+                        <a href="https://youtu.be/k-c-mPf3i50?si=UEaPktnMHdheAgK9" target="_blank" rel="noopener noreferrer">
+                            <img src="assets/img/033ff34f59add19bdbe0d924d449296b.jpeg" alt="">
+                            <div class="overlay-card">Clique aqui para assistir</div>
+                        </a>
+                    </figure>
                     <h2>3. Ratoescapáveis/A Fórmula do Desastre</h2>
                     <p>Poof transforma Timmy e Vicky em personagens de desenho animado.</p>
                 </section>
             </section>
         </section>
-        <footer>
-            <a href="#" target="_blank" rel="noopener noreferrer">Termos e aviso de privacidade</a>
-            <a href="#" target="_blank" rel="noopener noreferrer">Ajuda</a>
-            <a href="#" target="_blank" rel="noopener noreferrer">feedback</a>
-        </footer>
     </main>
+    <footer>
+        <a href="#" target="_blank" rel="noopener noreferrer">Termos e aviso de privacidade</a>
+        <a href="#" target="_blank" rel="noopener noreferrer">Ajuda</a>
+        <a href="#" target="_blank" rel="noopener noreferrer">feedback</a>
+    </footer>
 </body>
 </html>
